@@ -132,6 +132,9 @@ static struct kr_query *kr_rplan_push_query(struct kr_rplan *rplan,
 	qry->ns.addr[0].ip.sa_family = AF_UNSPEC;
 	gettimeofday(&qry->timestamp, NULL);
 	kr_zonecut_init(&qry->zone_cut, (const uint8_t *)"", rplan->pool);
+	qry->reorder = qry->flags & QUERY_REORDER_RR
+		? knot_wire_get_id(rplan->request->answer->wire)
+		: 0;
 	array_push(rplan->pending, qry);
 
 	return qry;
