@@ -1,3 +1,8 @@
+Knot Resolver 1.x.y (2016-xx-yy)
+================================
+
+- It now requires knot >= 2.3.1 to link successfully.
+
 Knot Resolver 1.1.1 (2016-08-24)
 ================================
 
